--- a/Chapter1.ipynb
+++ b/Chapter1.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:8a5d9db84222b9892fa75ad8cd8936cc60e6a9dd2fdd13688bff77d3281050c0"
+  "signature": "sha256:60b7d608bc63e2c78700412e51b1b42a58d7c25b1b74b2b624b783e6bb62672a"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -76,13 +76,13 @@
       "* An interpreter reads a high-level program and executes it, meaning that it does what the program says. \n",
       "  * It processes the program a little at a time, alternately reading lines and performing computations.\n",
       "\n",
-      "<img src=\"files/figs/interpret.png\" height=\"300\" >\n",
+      "<img src=\"files/figs/interpret.png\" width=\"300\" >\n",
       "\n",
       "* A compiler reads the program and translates it completely before the program starts running. \n",
       "  * The high-level program is called the **source code**, and the translated program is called the **object code** or the **executable**. \n",
       "  * Once a program is compiled, you can execute it repeatedly without further translation.\n",
       "\n",
-      "<img src=\"files/figs/compile.png\" height=\"300\" >"
+      "<img src=\"files/figs/compile.png\" width=\"500\" >"
      ]
     },
     {
