--- a/Chapter3.ipynb
+++ b/Chapter3.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:719c4a5a8594bbd3136513ebf05f5852cd60e8b45a408cd2ae558a931b6e8be4"
+  "signature": "sha256:0bd6f8348d97c3e0cabebac6d7bb097b8e83e32668a6a22ff26502a44ec3b656"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1719,13 +1719,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 50,
+       "prompt_number": 1,
        "text": [
         "5"
        ]
       }
      ],
-     "prompt_number": 50
+     "prompt_number": 1
     },
     {
      "cell_type": "code",
@@ -1739,22 +1739,24 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 51,
+       "prompt_number": 2,
        "text": [
         "7"
        ]
       }
      ],
-     "prompt_number": 51
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "*Write a function named `right_justify` that takes a string named s as a parameter and prints the string with enough leading spaces so that the last letter of the string is in column 70 of the display.*\n",
+      "*Write a function named `right_justify` that takes a string named `s` as a parameter and prints the string with enough leading spaces so that the last letter of the string is in column 70 of the display.*\n",
       "\n",
-      "``right_justify('allen')\n",
-      "                                                                 allen``"
+      "``\n",
+      "right_justify('allen')\n",
+      "                                                                 allen\n",
+      "``"
      ]
     },
     {
@@ -1772,20 +1774,20 @@
       "\n",
       "*A **function object** is a value you can assign to a variable or pass as an argument. For example, do_twice is a function that takes a function object as an argument and calls it twice:*\n",
       "\n",
-      "```\n",
+      "``\n",
       "def do_twice(f):\n",
       "    f()\n",
       "    f()\n",
-      "```\n",
+      "``\n",
       "\n",
       "*Here\u2019s an example that uses do_twice to call a function named print_spam twice.*\n",
       "\n",
-      "```\n",
+      "``\n",
       "def print_spam():\n",
       "    print 'spam'\n",
       "\n",
       "do_twice(print_spam)\n",
-      "```\n",
+      "``\n",
       "\n",
       "1. *Type this example into a script and test it.*\n",
       "2. *Modify `do_twice` so that it takes two arguments, a function object and a value, and calls the function twice, passing the value as an argument.*\n",
@@ -1839,7 +1841,7 @@
       "\n",
       "*The output of these statements is `'+ -'`.*\n",
       "\n",
-      "* A `print` statement all by itself ends the current line and goes to the next line.*\n",
+      "*A `print` statement all by itself ends the current line and goes to the next line.*\n",
       "\n",
       "2. *Write a function that draws a similar grid with four rows and four columns.*"
      ]
