--- a/Chapter6.ipynb
+++ b/Chapter6.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:166d0eecc51fbcc3fb9989203e9044c91d34b80103f504e63b7c97f7e3005260"
+  "signature": "sha256:c73b0f031458169afdfd44490708f76ae26618a42b81d179177a3af54fc3fc09"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -2232,7 +2232,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "*temporary variable:*\n",
+      "**temporary variable:**\n",
       "\n",
       "A variable used to store an intermediate value in a complex calculation.\n",
       "\n",
