add Chapter9, 10, and words.txt

--- a/Chapter7.ipynb
+++ b/Chapter7.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:ab433e8b443f78da82faed725d8910caa8a9a7a1885826d50113c36e015f12a8"
+  "signature": "sha256:64e87b5a268de219d59dce594acb98e9282a981d01119e2cd06569e0c7ca48b5"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -920,7 +920,7 @@
       "*The mathematician Srinivasa Ramanujan found an infinite series that can be used to generate a numerical approximation of $1/\\pi$:*\n",
       "\n",
       "$$\n",
-      "  \\frac{1}{2} \\pi = \\frac{2\\sqrt{2}}{9801}\n",
+      "  \\frac{1}{\\pi} = \\frac{2\\sqrt{2}}{9801}\n",
       "  \\sum_{k=0}^{\\infty} \\frac{(4k)!(1103+26390k)}{(k!)^4 396^{4k}}\n",
       "$$ \n",
       " \t\n",
@@ -929,6 +929,14 @@
       " \n",
       "*Write a function called `estimate_pi` that uses this formula to compute and return an estimate of $\\pi$. It should use a `while` loop to compute terms of the summation until the last term is smaller than 1`e-15` (which is Python notation for $10^{\u221215}$). You can check the result by comparing it to `math.pi`.*\n"
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
