--- a/Chapter15.ipynb
+++ b/Chapter15.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:0544889eb67120c6ecd74f4ef646b23c4fc2a44d420aba34c5d116736c243366"
+  "signature": "sha256:6874cab01de59ad7db3ca2e7cce18860ec9e9ff07d4f53b9be1ab7699eabf998"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -130,7 +130,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "<__main__.Point object at 0x1046cebd0>\n"
+        "<__main__.Point object at 0x10501c790>\n"
        ]
       }
      ],
@@ -190,7 +190,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The variable blank refers to a Point object, which contains two attributes. Each attribute refers to a floating-point number.\n",
+      "The variable blank refers to a `Point` object, which contains two attributes. Each attribute refers to a floating-point number.\n",
       "\n",
       "You can read the value of an attribute using the same syntax:"
      ]
@@ -298,7 +298,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Inside the function, `p` is an alias for `blank`, so if the function modifies `p`, `blank` changes."
+      "Inside the function, `p` is an **alias** for `blank`, so if the function modifies `p`, `blank` changes."
      ]
     },
     {
@@ -314,7 +314,7 @@
      "source": [
       "## Exercise 15.1  \n",
       "\n",
-      "Write a function called `distance_between_points` that takes two Points as arguments and returns the distance between them."
+      "Write a function called `distance_between_points` that takes two `Points` as arguments and returns the distance between them."
      ]
     },
     {
@@ -391,6 +391,13 @@
       "<img src=\"files/figs/rectangle.png\" width=\"400\" >\n",
       "\n",
       "Figure 15.2 shows the state of this object. An object that is an attribute of another object is **embedded**.\n"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "****"
      ]
     },
     {
@@ -570,7 +577,7 @@
      "source": [
       "## 15.6  Copying\n",
       "\n",
-      "Aliasing can make a program difficult to read because changes in one place might have unexpected effects in another place. It is hard to keep track of all the variables that might refer to a given object.\n",
+      "**Aliasing** can make a program difficult to read because changes in one place might have unexpected effects in another place. It is hard to keep track of all the variables that might refer to a given object.\n",
       "\n",
       "Copying an object is often an alternative to aliasing. The `copy` module contains a function called `copy` that can duplicate any object:"
      ]
@@ -784,17 +791,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 22,
-       "text": [
-        "__main__.Point"
-       ]
-      }
-     ],
-     "prompt_number": 22
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -815,17 +812,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "True\n",
-        "False\n"
-       ]
-      }
-     ],
-     "prompt_number": 23
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -875,13 +862,19 @@
      ]
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "****"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 23
+     "outputs": []
     }
    ],
    "metadata": {}
